# nonebot_plugin_StarRail_calendar

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
nonebot-plugin-star-rail-calendar/: browser.py
nonebot-plugin-starrail-calendar/: draw_calendar.py  utils.py
nonebot_plugin_StarRail_calendar/: __init__.py
nonebot_plugin_StarRail_calendar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nonebot_plugin_star_rail_calendar/: __init__.py  data_source.py  draw_calendar.py
nonebot_plugin_starrail_calendar/: __init__.py  browser.py  config.py  data_source.py  draw_calendar.py  utils.py
nonebot_plugin_starrail_calendar/template/: calendar.html
